# CiberSegT4-wa

./: .gitignore  .gitmodules  README.md  WELCOME.md  analisis_cuantitativo.ipynb  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
data/: repos.json
data/results/: ai-tools-codeql.json  ai-tools-grype-raw.json  ai-tools-grype.json  ai-tools-sbom.json  ai-tools_temp.sarif  claude-code-action_temp.sarif  claude-cookbooks-codeql.json  claude-cookbooks-grype-raw.json  claude-cookbooks-grype.json  claude-cookbooks-sbom.json  claude-cookbooks_temp.sarif  claude-plugins-official-codeql.json  claude-plugins-official-grype-raw.json  claude-plugins-official-grype.json  claude-plugins-official-sbom.json  claude-plugins-official_temp.sarif  cli-codeql.json  cli-grype-raw.json  cli-grype.json  cli-sbom.json  cli_temp.sarif  courses-grype-raw.json  courses-grype.json  courses-sbom.json  courses_temp.sarif  devalue-codeql.json  devalue-grype-raw.json  devalue-grype.json  devalue-sbom.json  devalue_temp.sarif  dts-buddy-codeql.json  dts-buddy-grype-raw.json  dts-buddy-grype.json  dts-buddy-sbom.json  dts-buddy_temp.sarif  eslint-config-grype-raw.json  eslint-config-grype.json  eslint-config-sbom.json  eslint-config_temp.sarif  eslint-plugin-svelte-codeql.json  (+73 more)
nbs/: _quarto.yml  index.ipynb  sidebar.yml
nbs/sbom/: explicacion_script_sbom.ipynb  generacion_sbom.ipynb  tema1.ipynb  tema2.ipynb
nbs/vuln/: LLMs_como_detectores_de_vulnerabilidades.md  explicacion_script_codeql.ipynb  (+3 more)
scripts/: add_submodules.py  generate_codeql.py  obtain_repositories.py
