[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "ciberseguridad_2026"
version = "0.1.0"
description = "Analisis reproducible de repositorios open source con SBOM, CodeQL y Grype"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{name = "Cucharoth", email = "cucharoth@gmail.com"}]
keywords = ["security", "sbom", "codeql", "grype"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "jupyterlab>=4.5.6",
    "pandas>=2.0.0",
    "ipywidgets>=8.0.0",
    "matplotlib>=3.7.0",
    "requests>=2.31.0",
]

[project.urls]
Repository = "https://github.com/Gape-mol/CiberSeg-T3"

[tool.uv]
package = false
